<resources>
    <string name="app_name">GulceTorkanBedirhanKansavProject</string>
    <string name="textview">TextView</string>
    <string name="textview2">TextView</string>
    <string name="textview3">TextView</string>
    <string name="type">Type:</string>
    <string name="name">Name</string>
    <string name="price">Price:</string>
    <string name="add_cart">Add Cart</string>
    <string name="add_cart2">Add Cart</string>
    <string name="back">Back</string>
    <string name="grocery_store">Grocery Store</string>
    <string name="categories">Categories:</string>
</resources>