<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    tools:context=".SecondActivity">

    <ImageView
        android:id="@+id/img1"
        android:layout_width="132dp"
        android:layout_height="127dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <ImageView
        android:id="@+id/img2"
        android:layout_width="132dp"
        android:layout_height="127dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="84dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img1"
        app:layout_constraintVertical_bias="0.0"
        tools:srcCompat="@tools:sample/avatars" />


    <TextView
        android:id="@+id/name1"
        android:layout_width="115dp"
        android:layout_height="48dp"
        android:layout_marginStart="156dp"
        android:layout_marginTop="52dp"
        android:layout_marginBottom="5dp"
        android:textColor="#F8F0F0"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/price1"
        app:layout_constraintStart_toStartOf="@+id/img1"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/name2"
        android:layout_width="102dp"
        android:layout_height="48dp"
        android:layout_marginStart="148dp"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/addBtn2"
        app:layout_constraintHorizontal_bias="0.472"
        app:layout_constraintStart_toStartOf="@+id/img2"
        app:layout_constraintTop_toTopOf="@+id/img2" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/price1"
        android:layout_width="112dp"
        android:layout_height="53dp"
        android:layout_marginStart="173dp"
        android:layout_marginEnd="33dp"
        android:layout_marginBottom="165dp"
        app:layout_constraintBottom_toTopOf="@+id/price2"
        app:layout_constraintEnd_toStartOf="@+id/addBtn1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name1"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/price2"
        android:layout_width="105dp"
        android:layout_height="54dp"
        android:layout_marginStart="195dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="379dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/addBtn2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/price1"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />



    <Button
        android:id="@+id/addBtn1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:onClick="onClick"
        android:text="@string/add_cart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/price1"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/addBtn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="184dp"
        android:onClick="onClick"
        android:text="@string/add_cart2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.157"
        app:layout_constraintStart_toEndOf="@+id/price2"
        app:layout_constraintTop_toBottomOf="@+id/addBtn1" />

    <Button
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:onClick="onClick"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>